# rust-aws-lambda

./: Cargo.toml  README.md
src/: call_endpoint.rs  main.rs
